# deepecho

./: .env.example  .gitignore  FEATURES.md  PUSH_TO_GITHUB.md  README.md  START.md  SUPABASE_INTEGRATION_CHECK.md  SUPABASE_QUICK_SETUP.md  SUPABASE_SETUP.md  index.html  package-lock.json  package.json  run-backend.bat  run-frontend.bat  start-all.bat  start-backend.bat  start-frontend.bat  vite.config.ts
backend/: .env.example  FIX_ENV_GUIDE.md  README.md  analysis_service.py  auth.py  auth_supabase.py  check_db.py  check_supabase.py  config.py  database.py  download_mentalbert.py  main.py  model_local.py  models_db.py  preprocess.py  pyproject.toml  requirements.txt  schemas.py  supabase_auth_http.py  supabase_client.py
backend/migrations/: add_flagged_for_followup.sql
backend/routers/: auth.py  metrics.py  patients.py
docs/: PROJECT_IMPLEMENTATION_GUIDE.md
src/: App.tsx  index.css  main.tsx  routes.tsx
src/components/: ConfidenceMeter.tsx  ErrorBoundary.tsx  ProtectedRoute.tsx  TopNav.tsx
src/contexts/: AuthContext.tsx
src/lib/: api.ts  mockData.ts  supabase.ts
src/pages/: AnalysisResults.tsx  Dashboard.tsx  Login.tsx  PatientDetail.tsx  Register.tsx  Settings.tsx
src/styles/: globals.css
