[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepecho-backend"
version = "0.1.0"
description = "DeepEcho API + MentalBERT (Supabase auth, PostgreSQL)"
readme = "README.md"
requires-python = ">=3.11,<3.14"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
